--- a/index.html
+++ b/index.html
@@ -20,29 +20,34 @@
 		<script src="js/todo.js"></script>
 	</head>
 	<body>
-	    <div class="header1">
-            
-        </div>
+	    <div class="head">
+	        <div class="head_left"></div>
+	        <div class="head_right"></div>
+	    </div>
+	    <div class="qita">
+	        <div class="qita_head">
+	            <div class="qit_left">
+	                <div class="qita_yuan"></div>
+	            </div>
+	            <h1>未登录</h1>
+	            <h2>请点击默认头像登录</h2>
+	        </div>
+	        <div data-role="all" class="all">所有</div>
+            <div data-role="com" class="completed">已完成</div>
+            <div data-role="rem" class="remind">未完成</div>
+            <div class="delall">
+                全部清除
+            </div>
+	    </div>
 	    <div class="header">
 	        <input type="text" placeholder="如破晓中的红日，冲破黎明前的黑暗！" value=""/>
 	        <div class="anniu">+</div>
-	        <div class="tuichu">
-	        </div>
 	    </div>
-	    
 	    <ul class="ul">
 	    </ul>
-	    <div class="footer">
-	        <div data-role="all" class="all">所有</div>
-	        <div data-role="com" class="completed">已完成</div>
-	        <div data-role="rem" class="remind">未完成</div>
-	        <div class="delall">
-	            全部清除
-	        </div>
-	    </div>
 	    <div class="xuanze"></div>
 	    <div class="yemian">
-	        <img src="img/0102f656fd025932f875a94463b5ff.png@900w_1l_2o_100sh.jpg" alt="" />
+	        <h1>todo</h1>
 	        <div class="ye_wei">
 	            <div class="ye_nei">
 	               <div class="ye_li">
